--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="SSM">
+    <wb-module deploy-name="SSM1">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/spring"/>
-        <property name="context-root" value="SSM"/>
-        <property name="java-output-path" value="/SSM/build/classes"/>
+        <property name="java-output-path" value="/SSM1/build/classes"/>
+        <property name="context-root" value="SSM1"/>
     </wb-module>
 </project-modules>
